# GeoSlicer

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  BUILD.md  CITATION.cff  CONTRIBUTING.md  CTestConfig.cmake  README.md  changelog  docker-compose.yml  pyproject.toml
src/ltrace/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/ltrace/ltrace/: assets_utils.py  constants.py  file_utils.py  generators.py  mpl_interactions.py  slicer_utils.py  ssh.py  sys_utils.py  transforms.py  units.py  wrappers.py
src/modules/: GeoSlicerScriptRepository.md  SuperBuild.cmake  parse_globals.py  setup.py
src/modules/AppContext/: AppContext.py
src/modules/AttributeTools/: AttributeTools.py  README.md
src/modules/AzimuthShiftTool/: AzimuthShiftTool.py  README.md
src/modules/BigImage/: BigImage.py  README.md
src/modules/BoundaryRemovalBigImage/: BoundaryRemovalBigImage.py  README.md
src/modules/BoundaryRemovalEffect/: BoundaryRemovalEffect.py  README.md
src/modules/CLAHETool/: CLAHETool.py  README.md
src/modules/CTAutoRegistration/: CTAutoRegistration.py  README.md
src/modules/Charts/: Charts.py  README.md
src/modules/ColorThresholdEffect/: ColorThresholdEffect.py  README.md
src/modules/CompanionProgressBarCLI/: CompanionProgressBarCLI.py  CompanionProgressBarCLI.xml
src/modules/ConnectivityEffect/: ConnectivityEffect.py  README.md
src/modules/CoreEnv/: CoreEnv.py  README.md
src/modules/CoreGeometryCLI/: CoreGeometryCLI.py  CoreGeometryCLI.xml
src/modules/CoreImagesImport/: CoreImagesImport.py
src/modules/CoreInpaint/: CoreInpaint.py  README.md
src/modules/CorePhotographLoader/: CorePhotographLoader.py  README.md
src/modules/CorePluggingExporter/: CorePluggingExporter.py
src/modules/CustomResampleScalarVolume/: CustomResampleScalarVolume.py  README.md
src/modules/CustomizedCropVolume/: CustomizedCropVolume.py  README.md
src/modules/CustomizedCurvatureAnisotropicDiffusion/: CustomizedCurvatureAnisotropicDiffusion.py  README.md
src/modules/CustomizedData/: CustomizedData.py  README.md
src/modules/CustomizedGaussianBlurImageFilter/: CustomizedGaussianBlurImageFilter.py  README.md
src/modules/CustomizedGradientAnisotropicDiffusion/: CustomizedGradientAnisotropicDiffusion.py  README.md
src/modules/CustomizedMedianImageFilter/: CustomizedMedianImageFilter.py  README.md
src/modules/CustomizedSegmentEditor/: CustomizedSegmentEditor.py  README.md
src/modules/CustomizedSmoothingEffect/: CustomizedSmoothingEffect.py  README.md
src/modules/CustomizedTables/: CustomizedTables.py  README.md
src/modules/DLISImport/: DLISImport.py
src/modules/DepthRangeSegmenterEffect/: DepthRangeSegmenterEffect.py
src/modules/ExpandSegmentsBigImage/: README.md  (+1 more)
tools/: bisect_bug_inspector.py  commons.py  delete_merged_branches.sh  install_packages.ps1  install_packages.sh  install_pre_commit_hook.py  new_module.py  read_core_dump.sh  setup.py
tools/deploy/: Customizer.py  deploy_slicer.py  deploy_slicer_docker.ps1  deploy_slicer_docker.sh  install_slicer_extensions.py  requirements.txt  slicer_deploy_config.json  slicerrc.py
tools/docker/: linux.Dockerfile  linux_base.Dockerfile  ubuntu.Dockerfile  windows.Dockerfile  windows_base.Dockerfile
tools/hooks/: pre-commit
tools/jenkins/: develop.Jenkinsfile  release.Jenkinsfile  testing.Jenkinsfile  updateDockerImage.Jenkinsfile  util.groovy
tools/pipeline/: check_branch_root.sh  check_dependencies_licenses.sh  check_line_endings.sh  check_run_unit_tests.py  download_geoslicer_base.py  dummy_script.py  generate_test_deploy.py  requirements.txt  run_modules_tests.py  upload_file_bucket.py  util.py
(+1442 files in other folders)
