[build-system]
requires = [
            "setuptools==59.8.0",
            "wheel==0.37.0",
            "Cython==0.29.28",
            "vswhere==1.3.0",
            "patch==1.16",
            "packaging==21.2"
            ]

[tool.autopep8]
max_line_length = 120
ignore = [
         "E501",
         "W6"
         ]
in-place = true
recursive = true
aggressive = 3

[tool.pylint.'MESSAGES CONTROL']
disable = [
           "C0116", # Missing function or method docstring
           "C0114", # Missing module docstring
           "W1203", # Use lazy % formatting in logging functions (logging-fstring-interpolation)
           "R0913", # Too many arguments (x/y) (too-many-arguments)
          ]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
exclude = "tools/resources/*|src/submodules/*|env|venv|.eggs/*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests/unit",
]
env = [
    "QT_QPA_PLATFORM = offscreen"
]

[tool.liccheck]
level = "STANDARD"
authorized_licenses = [
    "3-Clause BSD",
    "Apache 2.0",
    "Apache License 2.0",
    "Apache Software",
    "BSD",
    "FreeBSD",
    "BSD-3-clause",
    "BSD 3-Clause",
    "BSD License",
    "GNU Library or Lesser General Public License (LGPL)",
    "LGPL",
    "LGPL-3.0",
    "MIT",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "new BSD",
    "OSI Approved",
    "Python Software Foundation",
    "Historical Permission Notice and Disclaimer (HPND)",
    "Other/Proprietary"
]
unauthorized_licenses = [
    "GNU General Public License v3 (GPLv3)"
]
