[build-system]
requires = [
            "setuptools==61.3.1",
            "wheel==0.37.0",
            "Cython==0.29.28",
            "vswhere==1.3.0",
            "patch==1.16",
            "packaging==23.2",
            "setuptools-scm>=8"
            ]

[tool.autopep8]
max_line_length = 120
ignore = [
         "E501",
         "W6"
         ]
in-place = true
recursive = true
aggressive = 3

[tool.pylint.'MESSAGES CONTROL']
disable = [
           "C0116", # Missing function or method docstring
           "C0114", # Missing module docstring
           "W1203", # Use lazy % formatting in logging functions (logging-fstring-interpolation)
           "R0913", # Too many arguments (x/y) (too-many-arguments)
          ]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
exclude = "tools/resources/*|src/submodules/*|env|venv|.eggs/*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests/unit",
]
env = [
    "QT_QPA_PLATFORM = offscreen"
]

[tool.liccheck]
level = "STANDARD"
authorized_licenses = [
    "3-Clause BSD",
    "Apache 2.0",
    "Apache License 2.0",
    "Apache License, Version 2.0",    
    "Apache Software",
    "BSD",
    "FreeBSD",
    "BSD-3-clause",
    "BSD 3-Clause",
    "BSD License",
    "CC-BY",
    "GNU Library or Lesser General Public License (LGPL)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "ISC License (ISCL)",
    "LGPL",
    "LGPL-3.0",
    "MIT",
    "MIT License",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "new BSD",
    "OSI Approved",
    "Python Software Foundation",
    "Historical Permission Notice and Disclaimer (HPND)",
    "CMU License (MIT-CMU)",
]
unauthorized_licenses = [
    "GNU General Public License v3 (GPLv3)"
]
[tool.liccheck.authorized_packages]
# The packages below are listed as "Other/Proprietary"
# They use Intel licenses that allow distribution
mkl = ">=2022.2.1"
tbb = ">=2021.9.0"
intel-openmp = ">=2022.2.1"
